analog-scale squashed batch 1

--- a/src/sass/core/_widgets.scss
+++ b/src/sass/core/_widgets.scss
@@ -12,3 +12,4 @@
 @import "../../widget/select-likert/likertitem.scss";
 @import "../../widget/distress/distresspicker.scss";
 @import "../../widget/horizontal-choices/horizontalchoices.scss";
+@import "../../widget/analog-scale/analog-scalepicker.scss";
