--- a/src/widget/analog-scale/analog-scalepicker.scss
+++ b/src/widget/analog-scale/analog-scalepicker.scss
@@ -1,16 +1,27 @@
 $tick-color: black;
 $border: 1px solid $tick-color;
-$handle-color: red;
+$handle-color: #d42c2c;
 $width: 150px;
+$min-height: 800px;
+$question-margin: 20px;
 
 .or-appearance-analog-scale {
-    min-height: 400px;
+    position: relative;
+    min-height: $min-height;
     // using a dirty trick, knowing that only only question-labels with a lang attribute
     // are switched when the language changes
     .question-label.active[lang] {
         display: none;
     }
+    .question-label.active,
+    .or-hint.active,
+    .show-value {
+        width: calc(100% - #{$width} - #{$question-margin});
+    }
     .slider-vertical {
+        position: absolute;
+        top: $question-margin;
+        right: $question-margin;
         width: $width;
     }
     .slider-vertical .slider {
@@ -35,66 +46,84 @@ $width: 150px;
     }
     .slider-handle {
         background: $handle-color;
+        opacity: 0.9;
+        //outline: 0;
+   
     }
     .slider-selection {
         background: transparent;
         border-radius: 0;
+    }
+    .btn-reset {
+        position: absolute;
+        bottom: 50px;
+        left: 100px;
     }
     .scale {
         @include font-normal;
         height: 100%;
         position: absolute;
         //top: -1px;
-        left: -5px;
+        left: -6px;
         font-size: 12px;
         .number {
+            position: relative;
+            //border: 1px solid green;
             line-height: 16px;
-            height: 9.09%;
+            height: 10%;
             width: 30px;
-            border-bottom: $border;
+            border-top: $border;
+            background-image: linear-gradient(90deg, $tick-color 1px, transparent 0px);
+            background-repeat: no-repeat;
+            background-size: 52% 100%;
+            background-position: right;
             &:last-child {
-                //display: none;
-           
+                height: 0;
             }
         }
         .ticks {
+            //border: 1px solid red;
             width: 50%;
             height: 100%;
             margin-left: 25%;
             background-image: linear-gradient(0deg, $tick-color 1px, transparent 0px);
             background-repeat: repeat;
-            background-size: 100% 10%;
+            background-origin: border-box;
+            background-size: 100% 10.2%;
         }
         .value {
-            position: relative;
-            top: 50%;
+            position: absolute;
+            //border: 1px solid blue;
+            top: -9px;
             left: -25px;
             width: 20px;
             text-align: center;
         }
+        .value-0 {}
     }
     .max-label,
     .min-label {
         text-align: center;
-        //max-width: $width
-   
     }
     .show-value {
+        width: calc(100% - $width);
+    }
+    .show-value__box {
         background-color: black;
         text-align: center;
         color: white;
         width: 170px;
         padding: 10px 35px;
-        margin: 10px;
+        margin: 20px auto;
         @extend h5;
         @include font-normal;
-        .value {
-            margin-top: 3px;
-            display: block;
-            min-width: 1px;
-            min-height: 23px;
-            @extend h4;
-        }
+    }
+    .show-value__value {
+        margin-top: 3px;
+        display: block;
+        min-width: 1px;
+        min-height: 23px;
+        @extend h4;
     }
 }
 
