--- a/src/widget/analog-scale/analog-scalepicker.scss
+++ b/src/widget/analog-scale/analog-scalepicker.scss
@@ -26,7 +26,6 @@ $question-margin: 20px;
     }
     .slider-vertical .slider {
         min-height: 600px;
-        //width: $width;
         margin: 10px 0;
         left: 50%;
     }
@@ -34,14 +33,10 @@ $question-margin: 20px;
         opacity: 0.5;
     }
     .slider-vertical .slider-track {
-        //top: 18px;
-        //border-bottom-left-radius: 0;
-        //border-bottom-right-radius: 0;
         border-bottom: none;
         background: none;
         border-radius: 0;
         box-shadow: none;
-        //background: $handle-color;
         z-index: 10;
     }
     .slider-handle {
@@ -63,43 +58,51 @@ $question-margin: 20px;
         @include font-normal;
         height: 100%;
         position: absolute;
-        //top: -1px;
         left: -6px;
         font-size: 12px;
-        .number {
-            position: relative;
-            //border: 1px solid green;
-            line-height: 16px;
-            height: 10%;
-            width: 30px;
-            border-top: $border;
-            background-image: linear-gradient(90deg, $tick-color 1px, transparent 0px);
-            background-repeat: no-repeat;
-            background-size: 52% 100%;
-            background-position: right;
-            &:last-child {
-                height: 0;
+    }
+    .scale__number {
+        position: relative;
+        line-height: 16px;
+        height: 10%;
+        width: 30px;
+        border-top: $border;
+        background-image: linear-gradient(90deg, $tick-color 1px, transparent 0px);
+        background-repeat: no-repeat;
+        background-size: 52% 100%;
+        background-position: right;
+        &:last-child {
+            height: 0;
+        }
+    }
+    .scale__value {
+        position: absolute;
+        top: -9px;
+        left: -25px;
+        width: 20px;
+        text-align: center;
+    }
+    .scale__ticks {
+        width: 50%;
+        height: 100%;
+        margin-left: 25%;
+        background-image: linear-gradient(0deg, $tick-color 1px, transparent 0px);
+        background-repeat: repeat;
+        background-origin: border-box;
+        background-size: 100% 10.2%;
+    }
+    &.or-appearance-no-ticks {
+        .scale__number {
+            &:not(:last-child):not(:first-child) {
+                border-top: none;
             }
         }
-        .ticks {
-            //border: 1px solid red;
-            width: 50%;
-            height: 100%;
-            margin-left: 25%;
-            background-image: linear-gradient(0deg, $tick-color 1px, transparent 0px);
-            background-repeat: repeat;
-            background-origin: border-box;
-            background-size: 100% 10.2%;
+        .scale__value {
+            display: none;
         }
-        .value {
-            position: absolute;
-            //border: 1px solid blue;
-            top: -9px;
-            left: -25px;
-            width: 20px;
-            text-align: center;
+        .scale__ticks {
+            display: none;
         }
-        .value-0 {}
     }
     .max-label,
     .min-label {
