added no-ticks support to horizontal scale

--- a/src/widget/analog-scale/analog-scalepicker.scss
+++ b/src/widget/analog-scale/analog-scalepicker.scss
@@ -196,6 +196,7 @@ $question-margin: 20px;
         .scale__number {
             &:not(:last-child):not(:first-child) {
                 border-top: none;
+                border-left: none;
             }
         }
         .scale__value {
